@@ -11,7 +11,7 @@ Maintainer: Nathalie Villa-Vialaneix <nathalie.villa@univ-paris1.fr>
 Description: SOMbrero provides an implementation of the stochastic (also called
              on-line) Self-Organising Map (SOM) algorithm for numeric and
              relational data
-Depends: R (>= 3.0), wordcloud, igraph (>= 0.6), RColorBrewer, scatterplot3d, knitr, shiny
+Depends: R (>= 3.0), wordcloud, igraph (>= 0.6), RColorBrewer, scatterplot3d, knitr, shiny, e1071
 License: GPL (>= 2)
 URL: http://sombrero.r-forge.r-project.org/
 Repository: R-Forge
